# colette

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  colette  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
colette_cli/: __init__.py  main.py
colette_cli/cli/: __init__.py  parser.py
colette_cli/config/: __init__.py  commands.py
colette_cli/debug/: __init__.py  commands.py
colette_cli/dev/: __init__.py
colette_cli/project/: __init__.py  commands.py
colette_cli/session/: __init__.py  commands.py
colette_cli/template/: __init__.py  executor.py  registry.py
colette_cli/tui/: __init__.py  app.py  forms.py  menu.py  screens.py  splash.py  state.py
colette_cli/utils/: __init__.py  config.py  env.py  formatting.py  helpers.py  notify.py  ssh.py  tmux.py  validation.py
scripts/: build.sh  install.sh
tests/: conftest.py  test_cli_parser.py  test_config_commands.py  test_debug_commands.py  test_notify.py  test_project_commands.py  test_session_commands.py  test_template_executor.py  test_template_registry.py  test_tui_forms.py  test_tui_navigation.py  test_tui_screens.py  test_utils_config.py  test_utils_formatting.py  test_utils_helpers.py  test_utils_validation.py
