[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "colette"
version = "0.1.1"
description = "Context Organizer for Local Environments and Task Tracking Engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
# No runtime dependencies — stdlib only

[project.scripts]
colette = "colette_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["colette_cli*"]
